--- a/student-project/nimram/calculator.html
+++ b/student-project/nimram/calculator.html
@@ -36,6 +36,8 @@
         <button class="btn">0</button>
         <button class="btn">=</button>
         <button class="btn">/</button>
+        <button class="btn"><=</button>
+
       </div>
     </div>
     <script src="script.js"></script>
